--- a/kinh-nghiem/may-tinh/vi-dien-tu.html
+++ b/kinh-nghiem/may-tinh/vi-dien-tu.html
@@ -17,6 +17,7 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 
@@ -132,20 +133,27 @@ div.even {background-color: darkslategray}
 div.footer { font-size: 80%; color: red; text-align: center; }
 
 .flright { float:right; margin:0px 0px 0px 5px; width:45%; }
-
+.flleft { float:left; margin:0px 5px 0px 0px; width:45%; }
 @media (max-width: 399px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:10px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 400px) and (max-width: 499px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:20px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 500px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 1260px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 }
-.flleft { float:left; margin:0px 5px 0px 0px; width:45%; }
 </style>
 </head>
 
@@ -158,151 +166,30 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
                 <span></span>
             </button>
-    <amp-accordion>
-<section>
-  <h3 class="myheader">Giới-thiệu</h3>
-  <p>
-    <a href='/'>Trang-bìa</a><br>
+  <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about.html'>Thân-thế</a><br>
     <a href='/home/cv.html'>Thành-tích</a><br>
-  </p>
-</section>
-<section>
-  <h3 class="myheader">Hữu-ích</h3>
-  <div>
-    <amp-accordion>
-    <section>
-      <h4 class="myheader">Lập-kế-hoạch-tài-chính</h4>
-      <p>
-        <a href='/huu-ich/ke-hoach-tai-chinh/'>Giới-thiệu</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html'>Ghi-chép kết-quả-đầu-tư-dài-hạn</a><br>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Đầu-tư-cổ-phiếu</h4>
-      <p>
-        <a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu.html'>Quỹ-đầu-tư</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html'>Sổ-tiết-kiệm hay Quỹ-đầu-tư?</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html'>Làm gì khi thị-trường xuống-dốc?</a>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Các loại bảo-hiểm</h4>
-      <p>
-        <a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html'>Phí-bảo-hiểm-nhân-thọ</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html'>Bảo-hiểm-nhân-thọ-liên-kết-chung</a><br>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Câu-chuyện</h4>
-      <p>
-        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu.html'>Bắt-đầu đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html'>Những quyết-định tốt cho tuổi-già</a><br>
-        <a href='/huu-ich/cau-chuyen/nghi-huu-som.html'>Về-hưu trước 40 tuổi</a><br>
-        <a href='/huu-ich/cau-chuyen/tranh-mang-no.html'>Tránh mang nợ</a><br>
-        <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html'>Để tiền mua-nhà hay đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien.html'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
-      </p>
-    </section>
-    </amp-accordion>
-    <a href='/huu-ich/chi-tieu.html'>Chi-tiêu có kế-hoạch</a><br>
-    <a href='/huu-ich/nghi-luc.html'>Nghị-lực để có dư tiền</a><br>
-    <a href='/huu-ich/lam-phat-loi-song.html'>Lạm-phát-lối-sống</a><br>
-    <a href='/huu-ich/tich-luy.html'>Tích-luỹ-tài-sản</a><br>
-    <a href='/huu-ich/de-tien-vao-dau.html'>Để tiền vào đâu</a><br>
-    <a href='/huu-ich/cach-dau-tu.html'>Những cách đầu-tư</a><br>
-    <a href='/huu-ich/dung-so-dau-tu.html'>Đừng sợ chữ đầu-tư</a><br>
-    <a href='/huu-ich/hieu-qua-dau-tu.html'>Tính hiệu-quả-đầu-tư</a><br>
-    <a href='/huu-ich/tich-luy-dai-han.html'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
-  </div>
-</section>
-<section>
+  <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
+
   <h3 class="myheader">Kinh-nghiệm</h3>
-  <amp-accordion>
-  <section>
-    <h4 class="myheader">Máy-tính</h4>
-    <p>
-      <a href='/kinh-nghiem/may-tinh/pi-network.html'>Tiền-mật-mã Pi</a><br>
-      <a href='/kinh-nghiem/may-tinh/gnucash.html'>GnuCash</a><br>
-      <a href='/kinh-nghiem/may-tinh/ham-tai-chinh.html'>Các phép-tính-tài-chính cần biết</a><br>
-      <a href='/kinh-nghiem/may-tinh/cloudstorage.html'>Kinh-nghiệm dùng cloud storage</a><br>
-      <a href='/kinh-nghiem/may-tinh/privcloudstor.html'>Hướng-dẫn làm cloud storage server</a><br>
-      <a href="/kinh-nghiem/may-tinh/vi-dien-tu.html">Nhận-xét các ví-điện-tử</a><br>
-      <a href='/kinh-nghiem/may-tinh/googlemaps.html'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam-call.html'>Chặn những cuộc-gọi-tiếp-thị</a><br>
-      <a href='/kinh-nghiem/may-tinh/raspberrypi.html'>RaspberryPi</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam.html'>Chặn spam mail</a><br>
-      <a href='/kinh-nghiem/may-tinh/toys.html'>Home server cũ</a><br>
-      <a href='/kinh-nghiem/may-tinh/cryptocurrency.html'>Tìm-hiểu Bitcoin</a><br>
-      <a href='/kinh-nghiem/may-tinh/protect.html'>Bảo vệ tài sản số</a>
-    </p>
-  </section>
+    <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
+    <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
+    <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
 
-  <section>
-
-    <h4 class="myheader">Chữ Việt</h4>
-    <p>
-      <a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html'>Vị trí dấu thanh</a><br>
-      <a href='/kinh-nghiem/chu-viet/unicode.html'>Unicode</a><br>
-      <a href='/kinh-nghiem/chu-viet/utf-8.html'>UTF-8</a><br>
-      <a href='/kinh-nghiem/chu-viet/web.html'>Web Việt</a>
-    </p>
-  </section>
-
-  <section>
-
-    <h4 class="myheader">Linh tinh</h4>
-    <p>
-      <a href='/kinh-nghiem/linh-tinh/bep.html'>Bếp</a><br>
-      <a href='/kinh-nghiem/linh-tinh/ac-dc.html'>Điện một chiều và điện xoay chiều</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien.html'>Tiêu thụ điện</a><br>
-      <a href='/kinh-nghiem/linh-tinh/dien-standby.html'>Điện standby</a><br>
-      <a href='/kinh-nghiem/linh-tinh/magchan.html'>Dùng thử Magchan để giặt</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh.html'>Máy lạnh</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter.html'>Máy lạnh inverter</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nong.html'>Nóng</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nhiet-do.html'>Nhiệt độ một ngày</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv.html'>Tần số của TV</a><br>
-      <a href='/kinh-nghiem/linh-tinh/hong-ngoai.html'>Hồng ngoại</a><br>
-    </p>
-  </section>
-  </amp-accordion>
-</section>
-<section>
-  <h3 class="myheader">Ý kiến</h3>
-  <p>
-    <a href='/y-kien/bat-ca-hai-tay.html'>Bắt cá hai tay</a><br>
-    <a href='/y-kien/su-giau-co.html'>Nguồn gốc sự giàu có</a><br>
-    <a href='/y-kien/xa-hoi-thong-tin.html'>Xã hội thông tin</a><br>
-    <a href='/y-kien/dung-hang-viet-nam.html'>Dùng hàng Việt</a><br>
-    <a href='/y-kien/gia-tra.html'>Giả trá</a><br>
-    <a href='/y-kien/nhung-cai-nem.html'>Những cái nêm</a><br>
-    <a href='/y-kien/khac-nguoi.html'>Khác người</a><br>
-    <a href='/y-kien/da-len-bao.html'>Đã lên báo</a>
-  </p>
-</section>
-
-<section>
-
+  <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
-  <p>
     <a href='/download/'>Download</a><br>
     <a href='/sitemap.html'>Mục lục</a>
-  </p>
-</section>
-
-<section>
   <h3 class="myheader"></h3>
-  <p>
   <br>
   <br>
   <br>
   <br>
-  </p>
-</section>
-</amp-accordion>
+
 
   </amp-sidebar>
 <main>
@@ -313,6 +200,26 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
 
+  <div class="leftads">
+  <!-- AMP Responsive Skyscrapper -->
+<amp-ad
+media="(min-width: 1260px)"
+layout="fill"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="5275186684">
+</amp-ad>
+  </div>
+  <div class="rightads">
+  <!-- AMP Responsive Skyscrapper -->
+<amp-ad
+media="(min-width: 1260px)"
+layout="fill"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="5275186684">
+</amp-ad>
+  </div>
   <div class="body">
     <div class="title">Ví-điện-tử</div>
 
@@ -346,6 +253,31 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>
 Séc có một điểm khác so với lệnh-chuyển-khoản là bên-trả-tiền không cần tốn thời-gian giao-dịch với ngân-hàng, chỉ cần viết vài chữ lên tờ séc in-sẵn rồi đưa cho bên-nhận-tiền. Bên-nhận-tiền sẽ tốn công đem tờ séc đó đến ngân-hàng để nhận tiền-mặt, phải trả phí, có khi không nhận được ngay.
 Cuối năm 1995, trong thời-gian hơn 3 tháng sang làm việc ở Canada, tôi có mua một vài thứ thuộc nhóm hàng-miễn-thuế cho người-ngoại-quốc. Thủ-tục nhận lại số thuế trong số tiền đã mua hàng là phải ra khỏi Canada, điền vào mẫu-đơn in-sẵn rồi gửi đơn kèm với các hoá-đơn mua hàng đến cơ-quan thuế Canada. Hơn một tháng sau cơ-quan thuế Canada gửi cho tôi một tờ séc để trả số thuế được miễn. Tôi đem tờ séc đến Vietcombank hỏi thủ-tục nhận-tiền, Vietcombank báo số phí phải trả gần bằng số tiền ghi trên tờ séc (vì số tiền thuế được miễn quá ít và phí giao-dịch giữa Việt-Nam và ngoại-quốc cao) nên tôi không làm thủ-tục nhận-tiền.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <h1>Tình-hình ví-điện-tử ở Việt-Nam</h1>
 <div class="flright"><amp-img alt="Ví-điện-tử" src="/images/mmoney-digital-wallet.jpg" width="740" height="493" layout="responsive"></amp-img></div>
@@ -368,6 +300,31 @@ Phần nhiều các hệ-thống-ví khác chưa có nơi giao-dịch để nộ
 <p>Một trở-ngại cho việc dùng ví-điện-tử ở Việt-Nam hiện nay là các hệ-thống-ví chưa nối được với nhau, chưa thể chuyển tiền từ ví trong hệ-thống này sang ví trong hệ-thống khác. Trở ngại này gần giống như hệ-thống ATM và POS ở Việt-Nam khoảng 20 năm trước: máy ATM của ngân-hàng nào chỉ cho thẻ của ngân-hàng đó rút tiền.<br>
 Các tổ-chức có liên-quan cần cố-gắng xoá-bỏ trở-ngại này để mỗi người chỉ cần có một ví-điện-tử thanh-toán được mọi khoản tiêu-vặt như vá bánh xe, mua đồ ăn sáng… Những người-bán-lẻ cũng nên dùng ví-điện-tử để nhận-tiền, không sợ rơi mất tiền, không sợ tiền giả, không sợ đếm sai, không sợ thiếu tiền lẻ để thối lại. Mỗi người-bán-lẻ in sẵn các QR-code của ví của mình với các mức giá, treo các QR-code đó ở nơi thuận-tiện để khách-hàng scan khi trả-tiền. Thợ-sửa-xe thì in sẵn các QR-code bơm-bánh-xe 1.999₫, vá-bánh-xe 14.999₫… Hàng-xôi thì in sẵn các QR-code xôi-đậu-xanh 9.999₫, xôi-gà 11.999₫… Giữa năm 2019 đã có một <a href="https://dantri.com.vn/kinh-doanh/danh-giay-thoi-40-quet-ma-qr-tu-choi-nhan-tien-matchuyen-da-xuat-hien-o-viet-nam-20190731114202706.htm" target='_blank'>người-đánh-giày ở thành-phố Tuyên-Quang nhận-tiền qua ví-điện-tử</a>.<br>
 Ví-điện-tử dùng để trả các khoản tiêu-vặt. Các khoản tiêu lớn hơn một chút như đi siêu-thị hàng tuần, mua tour đi du-lịch… thì chúng-ta thanh-toán bằng thẻ. Những món thanh-toán lớn hơn hạn-mức của thẻ thì ta dùng lệnh-chuyển-khoản. Tất cả các phương-tiện đó giúp chúng-ta không cần đến tiền-mặt.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <p>Tôi đã thử bốn ví-điện-tử MoMo, ZaloPay, ViettelPay, GrabPay-by-Moca. Sau đây là những đặc-tính riêng của mỗi ví:</p>
 <a href="https://zalopay.vn/" target='_blank'><h2>ZaloPay</h2></a>
@@ -414,6 +371,31 @@ Ví-điện-tử dùng để trả các khoản tiêu-vặt. Các khoản tiêu 
 </ul>
 <br style="clear:both">
 <p>P.S. Sau một thời-gian miễn tất-cả phí-rút-tiền và phí-giao-dịch thẻ-quốc-tế thì các ví-điện-tử chỉ cho miễn vài giao-dịch trong mỗi tháng.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <h1>Dùng ví-điện-tử như thế nào?</h1>
 <h2>Tạo ví</h2>
@@ -448,6 +430,31 @@ Với tiền điện và nước, ví sẽ nhớ luôn số hợp đồng của 
 <p>QR-code có-thể cố-định hoặc thay-đổi theo số tiền cần thanh-toán hoặc thay-đổi theo thời-gian (chỉ có giá-trị sử-dụng trong vài phút). Nếu QR-code cố-định thì sau khi scan phải gõ số tiền vào app.<br>
 Bạn nên để sẵn trong ví một ít tiền đủ để trả khi mua-sắm trực-tiếp ở siêu-thị, cửa-hàng, quán-ăn… để khỏi phải mất thời-gian nhập OTP từ ngân-hàng khi thanh-toán.<br>
 Hiện-nay, trả-tiền xăng bằng ví-điện-tử hoặc thẻ mất khá nhiều thời-giờ vì phải đi vào văn-phòng trạm-xăng nên không tiện đối với số tiền nhỏ khi đổ-xăng xe-gắn-máy.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <h2>Chuyển tiền cho người khác</h2>
 <p>Bạn có-thể chuyển tiền từ ví đến tài-khoản-ngân-hàng của bạn hoặc của người khác. Nếu người-nhận cũng dùng chung hệ-thống-ví thì bạn chỉ cần chuyển tiền đến số điện thoại đăng-ký ví, dễ nhớ hơn số-tài-khoản nhiều.
@@ -461,6 +468,31 @@ Hiện-nay, trả-tiền xăng bằng ví-điện-tử hoặc thẻ mất khá n
 Khi bạn bị mất ví thường thì <a href="https://vi.wikipedia.org/wiki/X%C3%A1c_su%E1%BA%A5t" target='_blank'>xác-suất</a> của việc bạn mất hết tiền trong ví và phải mua cái ví mới là gần 100%. Chỉ có rất ít trường hợp ví của bạn được người tốt bụng tìm thấy và trong ví có một mẩu giấy ghi tên và số điện thoại của bạn (<a href="https://vi.wikipedia.org/wiki/Danh_thi%E1%BA%BFp" target='_blank'>danh-thiếp</a>) để người tốt bụng gọi cho bạn.<br>
 Ví-điện-tử nằm trong một smartphone, khi smartphone bị mất thì xác-suất của việc mua smartphone mới là gần 100% nhưng xác-suất của việc bạn bị mất tiền trong ví-điện-tử là gần 0%. Tiền trong ví-điện-tử được bảo-vệ bằng mật-khẩu do bạn đặt, nếu smartphone có khả năng đọc dấu-vân-tay thì ví-điện-tử cũng được bảo-vệ bằng dấu-vân-tay của bạn. Khi không có mật-khẩu và dấu-vân-tay của bạn thì không ai lấy được tiền trong ví-điện-tử. Bạn chỉ cần cài app ví-điện-tử trên một smartphone khác và login vào với số-điện-thoại đã dùng cho ví thì số tiền sẽ hiện ra y như trước.</p>
 <p>Về mặt kỹ-thuật thì tiền trong ví-điện-tử khó bị mất, nhưng bạn cần phải sáng-suốt tránh bị lừa mất tiền. Kẻ-gian luôn-luôn tìm cách lừa người khác để lấy tiền, dù cho tiền đó là tiền-mặt, tiền trong ngân-hàng, vàng trong tủ hay tiền trong ví-điện-tử. Mật-khẩu của ví-điện-tử hay tài-khoản giao-dịch ngân-hàng điện-tử tương-đương với chìa-khoá của tủ-tiền, hộp-tiền của bạn. Đừng bao giờ đưa mật-khẩu cho bất kỳ người nào, kể cả người của ngân-hàng hay công ty ví-điện-tử. Bạn nên đọc thêm bài viết về những cách <a href="protect.html">bảo-vệ tài-sản kỹ-thuật-số</a>.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <h1>Ví-điện-tử PayPal</h1>
 <p>PayPal là một dịch-vụ-thanh-toán qua Internet đã có từ năm 1998. Mặc dù cũng có một số đặc-tính của ví-điện-tử, cũng có app trên smartphone nhưng PayPal hoạt-động chủ-yếu trên web.
