--- a/kinh-nghiem/linh-tinh/may-lanh-2.html
+++ b/kinh-nghiem/linh-tinh/may-lanh-2.html
@@ -19,9 +19,7 @@
 
 
 <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
-<script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 
 <!--
   Import the `amp-sidebar` component.
@@ -135,19 +133,27 @@ div.even {background-color: darkslategray}
 div.footer { font-size: 80%; color: red; text-align: center; }
 
 .flright { float:right; margin:0px 0px 0px 5px; width:45%; }
-
 @media (max-width: 399px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:10px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 400px) and (max-width: 499px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:20px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 500px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 1260px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
+  .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 }
+
 
 </style>
 </head>
@@ -161,151 +167,30 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
                 <span></span>
             </button>
-    <amp-accordion>
-<section>
-  <h3 class="myheader">Giới-thiệu</h3>
-  <p>
-    <a href='/'>Trang-bìa</a><br>
+  <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about.html'>Thân-thế</a><br>
     <a href='/home/cv.html'>Thành-tích</a><br>
-  </p>
-</section>
-<section>
-  <h3 class="myheader">Hữu-ích</h3>
-  <div>
-    <amp-accordion>
-    <section>
-      <h4 class="myheader">Lập-kế-hoạch-tài-chính</h4>
-      <p>
-        <a href='/huu-ich/ke-hoach-tai-chinh/'>Giới-thiệu</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html'>Ghi-chép kết-quả-đầu-tư-dài-hạn</a><br>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Đầu-tư-cổ-phiếu</h4>
-      <p>
-        <a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu.html'>Quỹ-đầu-tư</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html'>Sổ-tiết-kiệm hay Quỹ-đầu-tư?</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html'>Làm gì khi thị-trường xuống-dốc?</a>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Các loại bảo-hiểm</h4>
-      <p>
-        <a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html'>Phí-bảo-hiểm-nhân-thọ</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html'>Bảo-hiểm-nhân-thọ-liên-kết-chung</a><br>
-      </p>
-    </section>
-    <section>
-      <h4 class="myheader">Câu-chuyện</h4>
-      <p>
-        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu.html'>Bắt-đầu đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html'>Những quyết-định tốt cho tuổi-già</a><br>
-        <a href='/huu-ich/cau-chuyen/nghi-huu-som.html'>Về-hưu trước 40 tuổi</a><br>
-        <a href='/huu-ich/cau-chuyen/tranh-mang-no.html'>Tránh mang nợ</a><br>
-        <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html'>Để tiền mua-nhà hay đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien.html'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
-      </p>
-    </section>
-    </amp-accordion>
-    <a href='/huu-ich/chi-tieu.html'>Chi-tiêu có kế-hoạch</a><br>
-    <a href='/huu-ich/nghi-luc.html'>Nghị-lực để có dư tiền</a><br>
-    <a href='/huu-ich/lam-phat-loi-song.html'>Lạm-phát-lối-sống</a><br>
-    <a href='/huu-ich/tich-luy.html'>Tích-luỹ-tài-sản</a><br>
-    <a href='/huu-ich/de-tien-vao-dau.html'>Để tiền vào đâu</a><br>
-    <a href='/huu-ich/cach-dau-tu.html'>Những cách đầu-tư</a><br>
-    <a href='/huu-ich/dung-so-dau-tu.html'>Đừng sợ chữ đầu-tư</a><br>
-    <a href='/huu-ich/hieu-qua-dau-tu.html'>Tính hiệu-quả-đầu-tư</a><br>
-    <a href='/huu-ich/tich-luy-dai-han.html'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
-  </div>
-</section>
-<section>
+  <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
+
   <h3 class="myheader">Kinh-nghiệm</h3>
-  <amp-accordion>
-  <section>
-    <h4 class="myheader">Máy-tính</h4>
-    <p>
-      <a href='/kinh-nghiem/may-tinh/pi-network.html'>Tiền-mật-mã Pi</a><br>
-      <a href='/kinh-nghiem/may-tinh/gnucash.html'>GnuCash</a><br>
-      <a href='/kinh-nghiem/may-tinh/ham-tai-chinh.html'>Các phép-tính-tài-chính cần biết</a><br>
-      <a href='/kinh-nghiem/may-tinh/cloudstorage.html'>Kinh-nghiệm dùng cloud storage</a><br>
-      <a href='/kinh-nghiem/may-tinh/privcloudstor.html'>Hướng-dẫn làm cloud storage server</a><br>
-      <a href="/kinh-nghiem/may-tinh/vi-dien-tu.html">Nhận-xét các ví-điện-tử</a><br>
-      <a href='/kinh-nghiem/may-tinh/googlemaps.html'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam-call.html'>Chặn những cuộc-gọi-tiếp-thị</a><br>
-      <a href='/kinh-nghiem/may-tinh/raspberrypi.html'>RaspberryPi</a><br>
-      <a href='/kinh-nghiem/may-tinh/spam.html'>Chặn spam mail</a><br>
-      <a href='/kinh-nghiem/may-tinh/toys.html'>Home server cũ</a><br>
-      <a href='/kinh-nghiem/may-tinh/cryptocurrency.html'>Tìm-hiểu Bitcoin</a><br>
-      <a href='/kinh-nghiem/may-tinh/protect.html'>Bảo vệ tài sản số</a>
-    </p>
-  </section>
+    <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
+    <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
+    <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
 
-  <section>
-
-    <h4 class="myheader">Chữ Việt</h4>
-    <p>
-      <a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1.html'>Vị trí dấu thanh</a><br>
-      <a href='/kinh-nghiem/chu-viet/unicode.html'>Unicode</a><br>
-      <a href='/kinh-nghiem/chu-viet/utf-8.html'>UTF-8</a><br>
-      <a href='/kinh-nghiem/chu-viet/web.html'>Web Việt</a>
-    </p>
-  </section>
-
-  <section>
-
-    <h4 class="myheader">Linh tinh</h4>
-    <p>
-      <a href='/kinh-nghiem/linh-tinh/bep.html'>Bếp</a><br>
-      <a href='/kinh-nghiem/linh-tinh/ac-dc.html'>Điện một chiều và điện xoay chiều</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien.html'>Tiêu thụ điện</a><br>
-      <a href='/kinh-nghiem/linh-tinh/dien-standby.html'>Điện standby</a><br>
-      <a href='/kinh-nghiem/linh-tinh/magchan.html'>Dùng thử Magchan để giặt</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh.html'>Máy lạnh</a><br>
-      <a href='/kinh-nghiem/linh-tinh/may-lanh-inverter.html'>Máy lạnh inverter</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nong.html'>Nóng</a><br>
-      <a href='/kinh-nghiem/linh-tinh/nhiet-do.html'>Nhiệt độ một ngày</a><br>
-      <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv.html'>Tần số của TV</a><br>
-      <a href='/kinh-nghiem/linh-tinh/hong-ngoai.html'>Hồng ngoại</a><br>
-    </p>
-  </section>
-  </amp-accordion>
-</section>
-<section>
-  <h3 class="myheader">Ý kiến</h3>
-  <p>
-    <a href='/y-kien/bat-ca-hai-tay.html'>Bắt cá hai tay</a><br>
-    <a href='/y-kien/su-giau-co.html'>Nguồn gốc sự giàu có</a><br>
-    <a href='/y-kien/xa-hoi-thong-tin.html'>Xã hội thông tin</a><br>
-    <a href='/y-kien/dung-hang-viet-nam.html'>Dùng hàng Việt</a><br>
-    <a href='/y-kien/gia-tra.html'>Giả trá</a><br>
-    <a href='/y-kien/nhung-cai-nem.html'>Những cái nêm</a><br>
-    <a href='/y-kien/khac-nguoi.html'>Khác người</a><br>
-    <a href='/y-kien/da-len-bao.html'>Đã lên báo</a>
-  </p>
-</section>
-
-<section>
-
+  <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
-  <p>
     <a href='/download/'>Download</a><br>
     <a href='/sitemap.html'>Mục lục</a>
-  </p>
-</section>
-
-<section>
   <h3 class="myheader"></h3>
-  <p>
   <br>
   <br>
   <br>
   <br>
-  </p>
-</section>
-</amp-accordion>
+
 
   </amp-sidebar>
 <main>
@@ -314,6 +199,27 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <button on="tap:sidebar.toggle" class="ampstart-btn caps ml1" style="font-size:90%;font-weight:bold;background-color: blue; color: white;">MENU
       </button>
     </div>
+  </div>
+
+  <div class="leftads">
+  <!-- AMP Responsive Skyscrapper -->
+<amp-ad
+media="(min-width: 1260px)"
+layout="fill"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="5275186684">
+</amp-ad>
+  </div>
+  <div class="rightads">
+  <!-- AMP Responsive Skyscrapper -->
+<amp-ad
+media="(min-width: 1260px)"
+layout="fill"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="5275186684">
+</amp-ad>
   </div>
 
   <div class="body">
@@ -340,16 +246,91 @@ https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/may-lanh
 <p>Rất nhiều người dùng máy lạnh tưởng rằng chọn mức nhiệt độ thấp hơn trên bộ điều khiển từ xa (ĐKTX) sẽ làm máy chạy <strong>mạnh</strong> hơn (tăng công suất) và phòng mau mát hơn. Điều này chỉ đúng khi dùng máy lạnh <a href="may-lanh-inverter.html">inverter</a>, không đúng khi dùng các loại máy lạnh thường; mà phần lớn máy lạnh đang dùng đều không phải loại inverter. Ngay cả khi dùng loại máy lạnh inverter thì điều trên cũng chỉ đúng trong một giới hạn nhỏ thôi, máy chỉ có thể giảm bớt công suất chứ không thể tăng công suất quá khả năng của nó. Khi thấy trong phòng không mát thì sẽ có người cầm ngay lấy bộ ĐKTX và chọn xuống 16℃! Họ không biết rằng công suất của máy lạnh là có hạn, khi trong phòng không đủ mát tức là máy lạnh không đủ sức làm mát cho phòng, dù cho chọn nhiệt độ 25℃ hay 16℃ cũng không thể thay đổi nhiệt độ thực tế.</p>
 <p>Trong trường hợp máy lạnh đủ công suất làm mát phòng thì nó cũng cần 15-30 phút để giảm nhiệt độ trong phòng bớt 1℃, nhiều người mở máy lên được vài phút chưa thấy mát liền lấy bộ ĐKTX và chọn xuống 16℃ cho mau mát! Đó cũng là cách dùng sai, dù cho chọn nhiệt độ 25℃ hay 16℃ thì phòng cũng không mau mát hơn. Trong trường hợp này, chọn nhiệt độ 16℃ còn tự gây phiền là sau đó lại phải mất công cầm bộ ĐKTX để tăng nhiệt độ lên và máy đã tốn không ít điện để làm mát phòng quá mức.</p>
 <p>Một cách dùng sai khác nữa là chọn nhiệt độ xuống thấp hơn để <i>bù</i> cho những nguồn nhiệt trong phòng. Ví dụ: khi có ít người trong phòng thì chọn nhiệt độ 25℃, khi có thêm người hay thêm máy trong phòng thì chọn nhiệt độ 20℃. Đúng ra thì người dùng không phải làm việc bù đó; máy lạnh sẽ tự làm bằng cách chạy máy nén nhiều thời gian hơn, nghỉ ít hơn. Nếu máy nén cứ chạy liên tục không nghỉ có nghĩa là nó đã làm việc hết công suất rồi, có chỉnh xuống 16℃ cũng không mát hơn tí nào.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <p>Tất cả những thói quen sai đó là do người dùng không hiểu bản chất của máy ĐHNĐ. Máy ĐHNĐ không giống cái quạt máy. Ta có thể thấy tác dụng ngay khi ta điều chỉnh tốc độ quạt máy, nhưng ta không thể thấy tác dụng ngay khi ta chỉnh nhiệt độ ở máy ĐHNĐ. Bộ ĐKTX đã làm cho người ta ít dùng đến tay chân, lại còn làm cho người dùng hiểu sai bản chất của máy!</p>
 <p>Người quen ở vùng nhiệt đới sẽ hoàn toàn cảm thấy dễ chịu trong nhiệt độ khoảng 25-27℃, đặt máy lạnh dưới 25℃ là phí điện và thậm chí có thể gây bệnh.</p>
 <p>Cũng có nhiều người muốn có cảm giác <em>thật lạnh</em> nên chọn nhiệt độ thấp nhất rồi mặc áo ấm vào! Rất thường gặp các trường hợp này ở những nơi công cộng: nơi mà người dùng máy lạnh không phải là người trả tiền điện.</p>
 <p>Một số thợ điện lạnh thường khuyên người dùng <a href="/huu-ich/chi-tieu.html"><i>tiết kiệm</i></a> điện bằng cách chọn nhiệt độ thấp nhất! Họ giải thích rằng khi chọn nhiệt độ thấp nhất thì máy nén sẽ chạy liên tục với một cường độ dòng điện ổn định nên mức tiêu thụ điện cũng đều đặn; nếu chọn nhiệt độ cỡ 25℃ trở lên thì máy nén sẽ có lúc nghỉ, có lúc chạy, mỗi lần chạy lại thì dòng điện khởi động lớn gấp 4-5 lần dòng điện bình thường nên rất <i>hao</i> điện! Nhưng họ không chịu tính kỹ rằng dòng điện khởi động đó chỉ cao trong 1-2 giây mà thôi, tính ra thì thời gian khởi động đó chỉ hao điện bằng 5-10 giây chạy bình thường, rất ít so với hàng chục phút máy nén được nghỉ trước đó. <br />
 Như vậy <a href="/huu-ich/chi-tieu.html">tiết kiệm</a> điện kiểu lạ đời trên thật hại điện và còn hại luôn sức khoẻ người dùng lẫn tuổi thọ máy.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <p>Một cách dùng máy lạnh hại điện khác nữa là mở máy lạnh cho mát và mở cửa sổ cho thoáng, vừa thoáng vừa mát mới thích! Với khí hậu nhiệt đới như ở Việt Nam, nhiệt độ không khí bên ngoài có thể cao hơn nhiệt độ trong phòng đến 10℃, mở cửa sổ ra thì lượng nhiệt <a href="nong.html">truyền vào phòng</a> rất lớn, máy lạnh phải tốn rất nhiều điện để bơm lượng nhiệt đó trở ra ngoài. <br />
 Nếu cần thay đổi không khí để làm thoáng trong phòng thì nên gắn một quạt hút gió ở nơi nóng nhất trong phòng. Quạt hút không khí trong phòng và đẩy ra ngoài; không khí ngoài trời sẽ tự tìm lối vào phòng qua các khe cửa. Cần chọn cỡ quạt hút vừa đủ để làm thoáng phòng, quạt lớn quá cũng sẽ gây hao điện do có quá nhiều không khí nóng vào phòng. Nếu không chọn được quạt hút đủ nhỏ thì có thể cho quạt chạy cầm chừng (vừa chạy vừa nghỉ); hoặc không gắn quạt hút mà thỉnh thoảng mở cửa một lúc cho thoáng rồi đóng lại. <br />
 Những máy lạnh kiểu cửa sổ (máy lạnh một khối, gắn trên tường, phần lạnh trong phòng, phần nóng ngoài phòng) có sẵn chức năng thông gió, không cần gắn quạt hút trong phòng. Trên máy lạnh đó có một cần gạt để đóng mở một lỗ thông gió nhỏ chừng 25-30㎠. Khi mở lỗ ra, một phần không khí trong phòng sẽ bị đẩy ra ngoài qua lỗ đó.</p>
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
 <p>Một cách dùng sai nữa là gắn máy lạnh quá cao hoặc quá thấp. Khi máy lạnh chạy, nó sẽ làm mát phần không khí <b>bên dưới</b> nó, phần không khí bên trên nó thì không được làm mát. Trong văn phòng hay nhà ở thì người ta chỉ cần làm mát từ độ cao từ sàn lên đến 1,5m là đủ cho người ngồi hay nằm đều mát. Gắn máy lạnh quá cao thì phí điện. Những nhà có trần cao đến 3m hoặc hơn mà gắn máy lạnh gần sát trần sẽ bị hao điện vô ích. Ngoài ra gắn máy lạnh loại treo tường quá sát trần cũng làm cản luồng không khí đi vào máy. Tuy nhiên gắn máy lạnh thấp xuống ngang tầm mắt thì đúng về kỹ thuật nhưng lại không được đẹp mắt. Do đó các nhà sản xuất mới làm ra loại máy lạnh mặt gương hay khung tranh. Gắn máy lạnh quá thấp thì người trong phòng chỉ thấy lạnh chân mà không mát người. Loại máy lạnh một khối hay rơi vào tình trạng gắn quá thấp hoặc quá cao. Vì nhà phố ở Việt Nam chỉ có thể gắn máy lạnh loại này ở mặt tiền, mà mặt tiền thì vốn đã có cửa sổ và cửa đi chiếm gần hết nên chỉ có thể gắn máy lạnh dưới hoặc trên cửa sổ. <br />
 Về mặt độ cao thì loại máy lạnh tủ đứng là hợp lý nhất.</p>
