--- a/kinh-nghiem/linh-tinh/dien-standby.html
+++ b/kinh-nghiem/linh-tinh/dien-standby.html
@@ -130,6 +130,7 @@ div.even {background-color: darkslategray}
 .red {color:red;}
 .tblue {color:deepskyblue;}
 div.footer { font-size: 80%; color: red; text-align: center; }
+.flright { float:right; margin:0px 0px 0px 5px; width:45%; }
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
